Image upload cropping dialog fix

--- a/web/admin/react/src/assets/css/admin.css
+++ b/web/admin/react/src/assets/css/admin.css
@@ -380,10 +380,14 @@
 }
 
 .cropContainer {
-	width: 90%;
+	width: 100%;
 	height: 350px;
 	border: 1px solid black;
 	margin-bottom: 20px;
+}
+
+.cropImageModal .ant-modal {
+	max-width: 900px;
 }
 
 .productImageContainer {
